@@ -5,6 +5,8 @@ git-annex (4.20131003) UNRELEASED; urgency=low
   * The assitant can now run scheduled incremental fsck jobs on the local
     repository and remotes. These can be configured using vicfg or with the
     webapp.
+  * repair: New command, which can repair damaged git repositories
+    (even ones not using git-annex).
   * Automatically and safely detect and recover from dangling
     .git/annex/index.lock files, which would prevent git from
     committing to the git-annex branch, eg after a crash.
